# Vocabulary_builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
prompts/: english_prompt.md  german_prompt.md  system_prompt.md
src/: bot.py  build_card.py  card_manager.py  config.py  csv_manager.py  schemas.py
