[project]
name = "vocabulary-builder"
version = "0.1.0"
description = "Telegram bot for creating Quizlet cards for learning English and German"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "openai>=1.58.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.12.0",
]
